# patchright-cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  patchright-cli  patchright-cli.cmd  pyproject.toml
.claude-plugin/: marketplace.json
.claude-plugin/skills/: browser-automation.json
.github/workflows/: ci.yml  publish.yml
docs/: installation.md
docs/superpowers/plans/: 2026-04-14-cdp-attach.md  2026-04-14-cli-enhancements.md  2026-04-14-codegen.md  2026-04-14-context-config-and-permissions.md  2026-04-14-show-dashboard.md
skills/patchright-cli/: CATALOG.md  SKILL.md
src/patchright_cli/: __init__.py  __main__.py  cli.py  daemon.py  dashboard.py  ref_registry.py  snapshot.py
tests/: fixture.html  test_cli_config.py  test_daemon_handlers.py  test_e2e.py  test_ref_registry.py
