[project]
name = "patchright-cli"
version = "0.1.0"
description = "CLI tool for browser automation using Patchright (undetected Playwright fork)"
requires-python = ">=3.10"
dependencies = [
    "patchright",
    "pyyaml",
    "click",
]

[project.scripts]
patchright-cli = "patchright_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patchright_cli"]
