[project]
name = "patchright-cli"
version = "0.4.0"
description = "Anti-detect browser automation CLI using Patchright (undetected Playwright fork)"
license = "Apache-2.0"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "zpahai" },
]
keywords = ["browser", "automation", "anti-detect", "patchright", "playwright", "scraping", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "patchright",
    "pyyaml",
    "click",
]

[project.urls]
Homepage = "https://github.com/AhaiMk01/patchright-cli"
Repository = "https://github.com/AhaiMk01/patchright-cli"
Issues = "https://github.com/AhaiMk01/patchright-cli/issues"

[project.scripts]
patchright-cli = "patchright_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patchright_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: marks tests that launch a real browser",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "SIM105", "E402"]
